refactor, add TMDB api and ui
